test_case/rust-lang_rust/56765_447101855_146.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/issues/issue-21701.rs","byte_start":497,"byte_end":500,"line_start":12,"line_end":12,"column_start":13,"column_end":16,"is_primary":false,"text":[{"text":"    let y = t();","highlight_start":13,"highlight_end":16}],"label":"call expression requires function","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/issues/issue-21701.rs","byte_start":477,"byte_end":478,"line_start":11,"line_end":11,"column_start":11,"column_end":12,"is_primary":false,"text":[{"text":"fn foo<U>(t: U) {","highltwo closures, even if identical, have the same type","code":null,"level":"note","spans":[],"children":[],"rendered":null},{"message":"consider boxing your closure and/or using it as a trait object","code":null,"level":"help","spans":[],"children":[],"rendered":null}],"rendered":"error[E0308]: match arms have incompatible types\n  --> /checkout/src/test/ui/issues/issue-24036.rs:18:13\n   |\nLL |       let x = match 1usize {\n   |  _____________^\nLL | |     //~^ ERROR match arms have incompatible types\nLL | |         1 => |c| c + 1,\nLL | |         2 => |c| c - 1,\n   | |              --------- match arm with an incompatible type\nLL | |         _ => |c| c - 1\nLL | |     };\n   | |_____^ expected closure, found a different closure\n   |\n   = note: expected type `[closure@/checkout/src/test/ui/issues/issue-24036.rs:20:14: 20:23]`\n              found type `[closure@/checkout/src/test/ui/issues/issue-24036.rs:21:14: 21:23]`\n   = note: no two closures, even if identical, have the same type\n   = help: consider boxing your closure and/or using it as a trait object\n\n"}
[01:00:57] {"message":"mismatched types","code":{"code":"E0308","explanation":"\nThis error occurs when the compiler was unable to infer the concrete type of a\nvariable. It can occur for several cases, the most common of which is a\nmismatch in the expected type that the compiler inferred for a variable's\ninitializing expression, and the actual type explicitly assigned to the\nvariable.\n\nFor example:\n\n